--- a/announcement.html
+++ b/announcement.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.4.0">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iUW0R30ovb4j">
+    <meta name="app-version" content="1.5.0">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/iuYWu315obza">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.4.0</h1>
+        <h1>Augment Code Toolkit v1.5.0</h1>
         <p><strong>企业级代码开发工具套件 - 重大版本更新</strong></p>
 
         <h2>版本更新概述</h2>
