--- a/announcement.html
+++ b/announcement.html
@@ -5,38 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.0">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iuYWu315obza">
+    <meta name="app-version" content="1.5.1">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/ioJZC316dl6b">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.0</h1>
-        <p><strong>企业级代码开发工具套件 - 重大版本更新</strong></p>
+        <h1>Augment Code Toolkit v1.5.1（BUG修复）</h1>
+        <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
-        <h2>版本更新概述</h2>
+      <h2>版本更新概述</h2>
         <ul>
-            <li><strong>编辑器支持</strong> - 新增 IntelliJ IDEA 支持，现已全面支持 Visual Studio Code、Cursor、IntelliJ IDEA 三大主流编辑器</li>
-            <li><strong>版本兼容</strong> - 完全支持 Augment v0.498.0 最新版本，智能版本适配机制</li>
+            <li><strong>编辑器支持</strong> - 全面支持 Visual Studio Code、Cursor、IntelliJ IDEA 三大主流编辑器</li>
+            <li><strong>版本兼容</strong> - 完全支持 Augment v0.502.1 最新版本，智能版本适配机制</li>
             <li><strong>策略优化</strong> - 针对不同编辑器采用最优重置策略，有效保留用户个人偏好设置</li>
-            <li><strong>体验升级</strong> - 修复监控功能卡顿问题，新增停止功能，显著提升响应流畅度</li>
-            <li><strong>网络优化</strong> - 采用 IP1 优先连接策略，50% 概率选择最优网络节点</li>
-        </ul>
-
-        <h2>核心功能模块</h2>
-        <ul>
-            <li><strong>重置工具</strong> - 支持 Visual Studio Code、Cursor、IntelliJ IDEA 三大编辑器的智能重置</li>
-            <li><strong>网络环境</strong> - 搭建安全稳定的网络连接环境，IP1 优先策略，智能检测规避</li>
-            <li><strong>邮箱服务</strong> - 一键生成临时邮箱地址，自动识别和处理验证码</li>
-            <li><strong>邮件监控</strong> - 实时监控邮件状态，支持随时停止操作，音效提醒功能</li>
-        </ul>
-
-        <h2>编辑器支持详情</h2>
-        <ul>
-            <li><strong>IntelliJ IDEA</strong> <code>新增</code> - 智能重置策略，完整保留插件配置和用户偏好设置</li>
-            <li><strong>Cursor 编辑器</strong> - 完整支持 Cursor 编辑器的重置和配置管理</li>
-            <li><strong>Visual Studio Code</strong> - 支持标准版和 Insiders 预览版的完整功能</li>
+            <li><strong>BUG修复</strong> - 修复无法正确获取编辑器以及插件等问题</li>
+            <li><strong>一键无痕</strong> - 让敏感数据不落盘，尽量避免反检测数据。</li>
         </ul>
 
         <h2>界面体验优化</h2>
@@ -58,7 +43,7 @@
         <h3>技术支持与联系方式</h3>
         <p>
             <strong>邮箱支持：</strong>oncall24@126.com<br>
-            <strong>QQ 技术群：</strong>901815429
+            <strong>QQ 技术群：</strong>901815429、749225014
         </p>
     </div>
 </body>
