--- a/announcement.html
+++ b/announcement.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.1">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/ioJZC316dl6b">
+    <meta name="app-version" content="1.5.2">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/ib3qL319byqf">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.1（BUG修复）</h1>
+        <h1>Augment Code Toolkit v1.5.2</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
-      <h2>版本更新概述</h2>
+      <h2>更新说明</h2>
         <ul>
-            <li><strong>编辑器支持</strong> - 全面支持 Visual Studio Code、Cursor、IntelliJ IDEA 三大主流编辑器</li>
-            <li><strong>版本兼容</strong> - 完全支持 Augment v0.502.1 最新版本，智能版本适配机制</li>
-            <li><strong>策略优化</strong> - 针对不同编辑器采用最优重置策略，有效保留用户个人偏好设置</li>
-            <li><strong>BUG修复</strong> - 修复无法正确获取编辑器以及插件等问题</li>
-            <li><strong>一键无痕</strong> - 让敏感数据不落盘，尽量避免反检测数据。</li>
+            <li><strong>BUG修复</strong> - 修复 IDEA 破解版无法正常识别问题</li>
+            <li><strong>策略优化</strong> - 优化实时日志的显示方式</li>
+            <li><strong>重置功能</strong> - 重置更流畅，清理工作区速度更快</li>
+            <li><strong>一键无痕</strong> - 修复部分用户无法使用无痕模式问题</li>
+            <li><strong>减少体质</strong> - 移除不必要依赖，文件更小：70.3M → 28.5M</li>
         </ul>
 
         <h2>界面体验优化</h2>
