--- a/announcement.html
+++ b/announcement.html
@@ -43,7 +43,7 @@
         <h3>技术支持与联系方式</h3>
         <p>
             <strong>邮箱支持：</strong>oncall24@126.com<br>
-            <strong>QQ 技术群：</strong>901815429、749225014
+            <strong>QQ 技术群：</strong>1002587109
         </p>
     </div>
 </body>
