--- a/announcement.html
+++ b/announcement.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.2">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/ib3qL319byqf">
+    <meta name="app-version" content="1.5.3">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/iJQLA319mdyd">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.2</h1>
+        <h1>Augment Code Toolkit v1.5.3</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
       <h2>更新说明</h2>
         <ul>
+            <li><strong>小小拿捏</strong> - 编辑器检测速度慢已拿捏</li>
             <li><strong>BUG修复</strong> - 修复 IDEA 破解版无法正常识别问题</li>
             <li><strong>策略优化</strong> - 优化实时日志的显示方式</li>
             <li><strong>重置功能</strong> - 重置更流畅，清理工作区速度更快</li>
