--- a/announcement.html
+++ b/announcement.html
@@ -6,7 +6,7 @@
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
     <meta name="app-version" content="1.5.3">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iJQLA319mdyd">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/iHlL8319r5lc">
     <meta name="update-required" content="True">
 </head>
 <body>
