--- a/announcement.html
+++ b/announcement.html
@@ -5,24 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.3">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iHlL8319r5lc">
+    <meta name="app-version" content="1.5.4">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/if3Ht31q9eba">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.3</h1>
+        <h1>Augment Code Toolkit v1.5.4</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
       <h2>更新说明</h2>
         <ul>
-            <li><strong>小小拿捏</strong> - 编辑器检测速度慢已拿捏</li>
-            <li><strong>BUG修复</strong> - 修复 IDEA 破解版无法正常识别问题</li>
-            <li><strong>策略优化</strong> - 优化实时日志的显示方式</li>
-            <li><strong>重置功能</strong> - 重置更流畅，清理工作区速度更快</li>
-            <li><strong>一键无痕</strong> - 修复部分用户无法使用无痕模式问题</li>
-            <li><strong>减少体质</strong> - 移除不必要依赖，文件更小：70.3M → 28.5M</li>
+            <li><strong>修复邮件</strong> - 修复被你们薅废的邮件，接收邮件更快</li>
+            <li><strong>邮件限制</strong> - 且用且珍惜，每天每人限制6次邮件生成</li>
+            <li><strong>增强兼容</strong> - 提高了Windows10用户的兼容性</li>
         </ul>
 
         <h2>界面体验优化</h2>
