--- a/announcement.html
+++ b/announcement.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.5">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iGRDh31s37eh">
+    <meta name="app-version" content="1.5.6">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/iHNSD31x9agd">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.5</h1>
+        <h1>Augment Code Toolkit v1.5.6</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
       <h2>更新说明</h2>
         <ul>
-            <li><strong>最新邮件优先</strong> - 确保总是从最新的邮件中提取验证码</li>
-            <li><strong>修复邮件</strong> - 修复被你们薅废的邮件，接收邮件更快</li>
-            <li><strong>邮件限制</strong> - 且用且珍惜，每天每人限制6次邮件生成</li>
-            <li><strong>增强兼容</strong> - 提高了Windows10用户的兼容性</li>
+            <li><strong>封号测试</strong> - 我测试一小时没有封号发生，若封号及时反馈给我</li>
         </ul>
 
         <h2>界面体验优化</h2>
