--- a/announcement.html
+++ b/announcement.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.5.6">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iHNSD31x9agd">
+    <meta name="app-version" content="1.6.0">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/i91CH320gn9e">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.5.6</h1>
+        <h1>Augment Code Toolkit v1.6.0</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
       <h2>更新说明</h2>
         <ul>
-            <li><strong>封号测试</strong> - 我测试一小时没有封号发生，若封号及时反馈给我</li>
+            <li><strong>封号唯一解决办法</strong> - 加入社区计划</li>
+            <li><strong>添加OAuth 2.0 + PKCE认证清理</strong> - 本地所有文件已经逆向</li>
         </ul>
 
         <h2>界面体验优化</h2>
