--- a/announcement.html
+++ b/announcement.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augment Code Toolkit 软件公告</title>
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.6.0">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/i91CH320gn9e">
+    <meta name="app-version" content="1.7.0">
+    <meta name="update-url" content="https://qm.qq.com/q/8X6IbOz5MQ">
     <meta name="update-required" content="True">
 </head>
 <body>
     <!-- 更新内容 - 专为客户端对话框设计 -->
     <div class="update-content-embedded">
-        <h1>Augment Code Toolkit v1.6.0</h1>
+        <h1>Augment Code Toolkit v1.7.0</h1>
         <p><strong>若发现任何BUG，请及时在群里反映</strong></p>
 
       <h2>更新说明</h2>
@@ -39,9 +39,9 @@
 
         <h3>技术支持与联系方式</h3>
         <p>
-            <strong>邮箱支持：</strong>oncall24@126.com<br>
             <strong>QQ 技术群：</strong>1002587109
         </p>
     </div>
 </body>
 </html>
+
