--- a/announcement.html
+++ b/announcement.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.8.0">
-    <meta name="update-url" content="https://qm.qq.com/q/8X6IbOz5MQ">
+    <meta name="app-version" content="1.8.1">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/ir9WN358xycb">
     <meta name="update-required" content="True">
 </head>
 </html>
+
