--- a/announcement.html
+++ b/announcement.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="1.8.3">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/iduU2359sdfe">
+    <meta name="app-version" content="2.0.0">
+    <meta name="update-url" content="https://wwzm.lanzoub.com/ifoIE35mlmrg">
     <meta name="update-required" content="True">
 </head>
 </html>
+
