--- a/announcement.html
+++ b/announcement.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 版本信息 - 不会在公告中显示 -->
     <meta name="app-version" content="2.0.0">
-    <meta name="update-url" content="https://wwzm.lanzoub.com/ijuPE35mvdni">
+    <meta name="update-url" content="https://qm.qq.com/q/8vGOIgd6w2">
     <meta name="update-required" content="True">
 </head>
 </html>
-
