--- a/announcement.html
+++ b/announcement.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 版本信息 - 不会在公告中显示 -->
-    <meta name="app-version" content="2.0.1">
-    <meta name="update-url" content="https://qm.qq.com/q/8vGOIgd6w2">
+    <meta name="app-version" content="9.9.9">
+    <meta name="update-url" content="https://bye-211.pages.dev/">
     <meta name="update-required" content="True">
 </head>
 </html>
