--- a/announcement.html
+++ b/announcement.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 版本信息 - 不会在公告中显示 -->
     <meta name="app-version" content="2.0.1">
-    <meta name="update-url" content="https://bye-211.pages.dev/">
+    <meta name="update-url" content="https://byebye-bu3.pages.dev/">
     <meta name="update-required" content="True">
 </head>
 </html>
+
 
